[package]
name = "feed_mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
feed-rs = "1.2.0"
reqwest = "0.11.12"
serde = {version = "1.0.147", optional=true}

[features]
blocking = ["reqwest/blocking"]
serde = ["dep:serde"]
