[package]
name = "feed_mem"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zperk13/feed_mem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
feed-rs = "1.2.0"
reqwest = "0.11.12"
serde = {version = "1.0.147", optional=true}

[features]
blocking = ["reqwest/blocking"]
serde = ["dep:serde"]

# Reverses the Vec of new entries before returning them. New entries are usually returned newest to oldest, which can be undesirable
auto_reverse = []
